--- a/cinnamon-starter/src/main/resources/templates/initWizard.html
+++ b/cinnamon-starter/src/main/resources/templates/initWizard.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="cinnamon.starter">
 <head>
 <meta charset="UTF-8">
 <title>cinnamon init wizard</title>
 </head>
 <body>
 	<init-wizard>loading...</init-wizard>
-	<script src="/js/app.initWizard.bundle.js"></script>
+	<script src="/js/app.index.bundle.js"></script>
 </body>
 </html>
