npm initWizard 테스트중

--- a/cinnamon-core-web/src/main/resources/templates/core/components/initWizard.html
+++ b/cinnamon-core-web/src/main/resources/templates/core/components/initWizard.html
@@ -1,5 +1,8 @@
 <div layout="row" flex>
 초기화 마법사1
+	
+	<md-button class="md-raised md-primary">버튼</md-button>
+	
 	<div class="content-container" flex d-whiteframe="2"style="background-color: #ffffff" md-whiteframe="2">
 		<md-stepper id="initWizard" md-alternative="true" md-linear="true" flex>
 			<md-step ng-repeat="step in wizard.steps" md-label="{{step.name}}">
