--- a/cinnamon-starter/src/main/resources/templates/initWizard.html
+++ b/cinnamon-starter/src/main/resources/templates/initWizard.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html ng-app="cinnamon.starter">
 <head>
-<meta charset="UTF-8">
+<meta charset="utf-8">
+<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
 <title>cinnamon init wizard</title>
+<base href="/" />
 </head>
 <body>
 	<init-wizard>loading...</init-wizard>
-	<script src="/js/app.index.bundle.js"></script>
+	<script src="/js/app.innitWizard.bundle.js"></script>
 </body>
 </html>
