javascript 라이브러리들 버전 업
angular -> 5.10 으로변경 및 관련 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
@@ -47,6 +47,7 @@ angular.module('cinnamon')
 	}
 });
 </script>
+<base href="/" />
 </head>
 <body layout:fragment="body" layout-gt-xs="row" layout-align-gt-xs="center start" class="content">
 
