--- a/cinnamon-core-web/src/main/resources/templates/core/components/initWizard.html
+++ b/cinnamon-core-web/src/main/resources/templates/core/components/initWizard.html
@@ -1,11 +1,12 @@
 <div layout="row" flex>
-	<div class="content-container" flex d-whiteframe="2"style="background-color: #ffffff" md-whiteframe="2">
-		<md-button class="md-raised md-primary">버튼</md-button>
+	<md-toolbar>
 		
-		<md-steppers id="initWizard" md-alternative="true" md-linear="true" flex>
+	</md-toolbar>
+	<div class="content-container" flex d-whiteframe="2">
+		<md-stepper id="initWizard" md-alternative="true" md-linear="true" flex>
 			<md-step ng-repeat="step in wizard.steps" md-label="{{step.name}}">
 				<md-step-body layout-padding ng-include="step.uri"></md-step-body>
 			</md-step>
-		</md-steppers>
+		</md-stepper>
 	</div>
 </div>
