시스템 초기화 마법사를 stepers 형태로 변경
초기화 마법사가 탭 형태로 되어 있었는데 몇가지 문제가 있었고

google material design 가이드에 일종의 wizard와 같은 역할을 하는
 stepper
component(https://material.io/guidelines/components/steppers.html) 형태가 더
적절하다고 판단되고, angular material에서 제공하지 않는 stepper component를 개인 개발자가 개발한
버전(https://github.com/eberlitz/material-steppers) 이 있어서 그것으로 교체함

기타
 - 향후 범용적인 wizard 형태로 사용하기 위해 wizard component를 개발중

--- a/cinnamon-core-web/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/layout/default.html
@@ -97,13 +97,21 @@
 		</div>
 		
 		<!-- 2depth menus -->
-		<div class="md-primary md-hue-1" th:if="${#arrays.isEmpty(currentMenus.actives) == false and #arrays.isEmpty(currentMenus.actives[0].childs) == false}">
+		<!-- <div class="md-primary md-hue-1" th:if="${#arrays.isEmpty(currentMenus.actives) == false and #arrays.isEmpty(currentMenus.actives[0].childs) == false}">
 			<md-tabs class="md-primary md-hue-1" md-center-tabs="true" md-stretch-tabs="auto" md-selected="${currentMenus.current2depthIndex}">
 				<md-tab ng-click="selectMenu('${menu.uri}')" th:each="menu: ${currentMenus.actives[0].childs}">
 					<md-tab-label th:text="${menu.name}" />
 				</md-tab>
 			</md-tabs>
+		</div> -->
+		<div class="md-primary md-hue-1" ng-if="currentMenus.actives.length > 0">
+			<md-tabs class="md-primary md-hue-1" md-center-tabs="true" md-stretch-tabs="auto" md-selected="currentMenus.current2depthIndex">
+				<md-tab ng-click="selectMenu(menu.uri)" ng-repeat="menu in currentMenus.actives[0].childs">
+					<md-tab-label>{{menu.name}}</md-tab-label>
+				</md-tab>
+			</md-tabs>
 		</div>
+		
 	</md-toolbar>
 	
 	<!-- mobile 대응 -->
