initWizard를 steppers 형태로 변경
향후 component 기반으로 가기위한 형태로 개발함.

--- a/cinnamon-core-web/src/main/resources/templates/core/components/cmWizard.html
+++ b/cinnamon-core-web/src/main/resources/templates/core/components/cmWizard.html
@@ -2,11 +2,10 @@
 	id="initWizardStepper"
 	md-alternative="true"
 	md-linear="true"
-	md-vertical="false"
+	md-vertical="true"
 	style="background-color: white"
 	class="md-whiteframe-2dp">
 	<md-step ng-repeat="step in wizard.steps" md-label="{{step.name}}">
-		<md-step-body layout-padding ng-include="step.uri">
-		</md-step-body>
+		<ng-include src="step.uri" />
 	</md-step>
 </md-stepper>
