--- a/cinnamon-core-web/src/main/resources/templates/core/components/initWizard/wellcome.html
+++ b/cinnamon-core-web/src/main/resources/templates/core/components/initWizard/wellcome.html
@@ -1,8 +1,10 @@
-<md-step-body layout-padding>
-	<p class="alert-info" layout-margin layout-padding>시스템 초기화를 시작합니다.</p>
-</md-step-body>
-<md-step-actions>
-	<md-button class="md-raised md-primary" ng-click="$ctrl.next()">
-		<md-icon>play_arrow</md-icon> 초기화 시작
-	</md-button>
-</md-step-actions>
+<div ng-controller="wellcomeCtrl">
+	<md-step-body>
+		<p class="alert-info" layout-margin layout-padding>시스템 초기화를 시작합니다.</p>
+	</md-step-body>
+	<md-step-actions>
+		<md-button class="md-raised md-primary" ng-click="next()">
+			<md-icon>play_arrow</md-icon> 초기화 시작
+		</md-button>
+	</md-step-actions>
+</div>
