cmList component 개발중
기존에 mdList로 개발되어 있던 목록 표시 component를
material design의  data table 형태로 변경함.
이를 위해 개인 개발자가 개발한 data table 구현 component 를 사용
https://github.com/iamisti/mdDataTable

--- a/cinnamon-core-web/src/main/resources/templates/core/components/initWizard/welcome.html
+++ b/cinnamon-core-web/src/main/resources/templates/core/components/initWizard/welcome.html
@@ -1,4 +1,4 @@
-<div ng-controller="wellcomeCtrl">
+<div ng-controller="welcomeCtrl">
 	<md-step-body>
 		<p class="alert-info" layout-margin layout-padding>시스템 초기화를 시작합니다.</p>
 	</md-step-body>
