--- a/cinnamon-core-web/src/main/resources/templates/core/initWizard.html
+++ b/cinnamon-core-web/src/main/resources/templates/core/initWizard.html
@@ -16,7 +16,7 @@
 
 <script type="text/javascript" src="/js/cinnamon.js"></script>
 <script type="text/javascript" src="/js/core/components/cmWizard.js"></script>
-<script type="text/javascript" src="/js/core/controllers/initWizard/wellcome.js"></script>
+<script type="text/javascript" src="/js/core/controllers/initWizard/welcome.js"></script>
 <script type="text/javascript" src="/js/core/controllers/initWizard/database.js"></script>
 <script type="text/javascript" src="/js/core/controllers/initWizard/baseData.js"></script>
 <script type="text/javascript" src="/js/core/controllers/initWizard/firstuser.js"></script>
@@ -35,7 +35,7 @@ angular.module('cinnamon.initWizard', ['cinnamon', 'mdSteppers']);
 	</md-toolbar>
 	
 	<div class="content-container">
-		<cm-wizard info-uri="/rest/configuration/initWizard" />
+		<cm-wizard info-uri="/rest/core/initWizard" />
 	</div>
 </body>
 </html>
