--- a/cinnamon-core-web/src/main/resources/templates/configuration/layout/base.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/layout/base.html
@@ -5,7 +5,7 @@
 	
 <head>
 <meta charset="UTF-8" />
-<title>Web console</title>
+<title>Cinnamon</title>
 <!-- Tell the browser to be responsive to screen width -->
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
 <meta name="_csrf" th:content="${_csrf.token}" th:if="${_csrf != null}" />
@@ -13,6 +13,8 @@
 
 <link href="/webjars/bootstrap/3.3.7/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <link href="/webjars/angular-material/1.1.1/angular-material.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/angular-material-icons/0.6.0/angular-material-icons.css" rel="stylesheet" type="text/css" />
+<link href="/webjars/github-com-iamisti-mdDataTable/2.2.0/md-data-table-style.css" rel="stylesheet" type="text/css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
 <!-- <link href="/webjars/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" /> -->
 <!-- <link href="https://cdn.rawgit.com/alenaksu/mdPickers/0.7.2/dist/mdPickers.min.css" rel="stylesheet" type="text/css" /> -->
@@ -23,9 +25,15 @@
 <script src="/webjars/angular-messages/1.5.9/angular-messages.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-sanitize/1.5.9/angular-sanitize.min.js" type="text/javascript"></script>
 <script src="/webjars/angular-material/1.1.1/angular-material.min.js" type="text/javascript"></script>
+<script src="/webjars/angular-material-icons/0.6.0/angular-material-icons.min.js" type="text/javascript"></script>
+
+<!-- <script src="/webjars/jquery/2.1.4/dist/jquery.min.js" type="text/javascript"></script> -->
+<script src="/webjars/lodash/3.10.1/lodash.min.js" type="text/javascript"></script>
+<script src="/webjars/github-com-iamisti-mdDataTable/2.2.0/md-data-table.js" type="text/javascript"></script>
+<script src="/webjars/github-com-iamisti-mdDataTable/2.2.0/md-data-table-templates.js" type="text/javascript"></script>
 <script src="/webjars/angular-ui-router/0.4.2/release/angular-ui-router.min.js" type="text/javascript"></script>
-<script src="/webjars/ng-file-upload/12.0.4/ng-file-upload.min.js" type="text/javascript"></script>
-<script src="/webjars/ng-file-upload/12.0.4/ng-file-upload-shim.min.js" type="text/javascript"></script>
+<!-- <script src="/webjars/ng-file-upload/12.0.4/ng-file-upload.min.js" type="text/javascript"></script>
+<script src="/webjars/ng-file-upload/12.0.4/ng-file-upload-shim.min.js" type="text/javascript"></script> -->
 
 <!-- <script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap.min.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-bootstrap-bower/0.14.3/ui-bootstrap-tpls.min.js"></script> -->
