--- a/cinnamon-core-web/src/main/resources/templates/configuration/users.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/users.html
@@ -12,6 +12,7 @@
 
 <script type="text/javascript" src="/js/configuration/directives/searchList.js"></script>
 <script type="text/javascript" src="/js/configuration/directives/dialogTemplate.js"></script>
+<script type="text/javascript" src="/js/core/components/cmList.js"></script>
 
 <script type="text/javascript" src="/js/configuration/users/viewController.js"></script>
 <script type="text/javascript" src="/js/configuration/users/listController.js"></script>
