기본 배경색을 약간 파란색 계열로 바꿈

--- a/cinnamon-core-web/src/main/resources/static/css/cinnamon.css
+++ b/cinnamon-core-web/src/main/resources/static/css/cinnamon.css
@@ -1,6 +1,7 @@
-/* md-content {background-color: #ecf0f5} */
+md-content {background-color: #ffffff}
+md-whiteframe {background-color: #ffffff}
 .content {
-	background-color: #f2f2f2
+	background-color: #f2f4f6
 }
 
 .content-container {
