사용자 리스트 수정중 사용자 목록 화면의 리스트를 새로 만든 cmList component 로 변경작업중
추가로 목록을 테스트하기위해 가짜 사용자 정보를 초기화 과정에서 등록하도록 수정

--- a/cinnamon-core-web/src/main/resources/templates/configuration/partials/users/list.html
+++ b/cinnamon-core-web/src/main/resources/templates/configuration/partials/users/list.html
@@ -12,7 +12,9 @@
 	<h3 layout-padding="" class="md-headline">사용자</h3>
 	
 	
-	<cm-list
+	<user-list />
+	
+	<!-- <cm-list
 		resource-url="/rest/configuration/users"
 		row-info="{
 			'table-row-id-key': 'userId',
@@ -53,7 +55,7 @@
 				<a ui-sref="view({userId:value})">{{value}}</a>
 			</mdt-custom-cell>
 		</cm-list-items>
-	</cm-list>
+	</cm-list> -->
 	
 	<!-- <md-card md-whiteframe="4">
 		
